recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:23: error: not found: value squareSidewSide
		squareSidewSide(levels-1, length/3);
                ^